--- a/client/template.html
+++ b/client/template.html
@@ -6,27 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keyboard Warrior</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./src/assets/css/style.css">
 </head>
 
 <body>
   <div id="app">
     <section class="welcome-page">
-      <img src="assets/main-logo.png" class="main-logo" alt="">
-        <div class="card">
-          <div class="card-body justify-content-center">
-              <div class="type-logo">
-                <img src="assets/type-logo.png" width="200px" alt="">
-            </div>
+      <img src="./src/assets/main-logo.png" class="main-logo" alt="">
+      <div class="card">
+        <div class="card-body justify-content-center">
+          <div class="type-logo">
+            <img src="./src/assets/type-logo.png" width="200px" alt="">
+          </div>
           <form class="mt-5 align-content-center">
             <div class="form-group">
-              <input type="text" class="form-control"  placeholder="Username">
+              <input type="text" class="form-control" placeholder="Username">
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center mt-5">
               <button class="btn btn-success w-50">Play</button>
             </div>
           </form>
-         </div>
+        </div>
       </div>
     </section>
   </div>
