--- a/client/template.html
+++ b/client/template.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="app">
+    <!-- WELCOME PAGE -->
     <section class="welcome-page">
       <img src="./src/assets/main-logo.png" class="main-logo" alt="">
       <div class="card">
@@ -29,10 +30,70 @@
         </div>
       </div>
     </section>
+
+
+    <!-- ARENA PAGE -->
+    <section class="arena-page">
+      <div class="card card-arena">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>health bar player 1</h3>
+              <div id="myProgress1">
+                <div id="myBar1"></div>
+              </div>
+            </div>
+            <div class="col">
+              <h3>health bar player 2</h3>
+              <div id="myProgress2">
+                <div id="myBar2"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Buat characterr -->
+          </div>
+        </div>
+      </div>
+      <!-- TYPE CONTAINER -->
+      <div class="card card-type p-3 mt-3">
+        <h1 class="display-5 ">
+          TYPE
+        </h1>
+      </div>
+    </section>
+
+
+    <!-- RESULT PAGE -->
+    <section class="winner-page">
+      <div class="card card-winner">
+        <div class="card-body">
+          <img src="src/assets/trophy.png" width="250px" class="mr-4 mb-3 trophy" alt="">
+          <h3>You're the champions</h3>
+          <p>Username</p>
+          <div class="btn-section">
+          <button class="btn btn-success">Play Again</button>
+          <button class="btn btn-danger">Exit</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="loser-page">
+    <div class="card card-loser">
+      <div class="card-body">
+        <img src="src/assets/medal.png" width="200px" class="mr-1 mb-3 trophy" alt="">
+        <h3>You lose, train more hard</h3>
+        <p>Username</p>
+        <div class="btn-section">
+          <button class="btn btn-success">Play Again</button>
+          <button class="btn btn-danger">Exit</button>
+        </div>
+      </div>
+    </div>
+    </section>
+
+
   </div>
-
-
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
