views and component done

--- a/client/template.html
+++ b/client/template.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app">
     <!-- WELCOME PAGE -->
-    <section class="welcome-page">
+    <!-- <section class="welcome-page">
       <img src="./src/assets/main-logo.png" class="main-logo" alt="">
       <div class="card">
         <div class="card-body justify-content-center">
@@ -29,7 +29,7 @@
           </form>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
     <!-- ARENA PAGE -->
