--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <!-- menyesuaikan css tester dulu -->
   <body class="bg-dark text-white">
-    <header class="bg-secondary text-center p-3 mb-5">
+    <!-- <header class="bg-secondary text-center p-3 mb-5"></header> -->
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
